--- a/module-admin/src/main/resources/templates/saesigManage/infoForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/infoForm.html
@@ -204,7 +204,7 @@
                 <div class="row form-group required mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="is_castrated"><strong>중성화
                         여부</strong></label>
-                    <select th:field="*{isDeleted}"
+                    <select th:field="*{isCastrated}"
                             class="form-select form-select-sm form-control-sm form-control-round custom-select">
                         <option value="Y">중성화</option>
                         <option value="N">비중성화</option>
@@ -219,7 +219,7 @@
                         <div class="border-checkbox-group" th:each="vaccineItem : ${vaccine}">
                             <input class="border-checkbox " type="checkbox"
                                    th:id="'vaccineCheckbox_' + ${vaccineItem.id}" th:value="${vaccineItem.id}"
-                                   th:checked="${#lists.contains(adopt.vaccineList, vaccineItem.id)}"/>
+                                   th:checked="${#lists.contains(''+adopt.vaccineList, ''+vaccineItem.id)}" />
                             <label class="form-label border-checkbox-label"
                                    th:for="'vaccineCheckbox_' + ${vaccineItem.id}">[[${vaccineItem.name}]]</label>
                         </div>
@@ -246,7 +246,7 @@
                 <div class="mb-0 form-group">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="status"><strong>분양상태</strong></label>
                     <div class="col-12">
-                        <select class="form-select form-select-sm form-control-sm form-control-round custom-select" th:field="*{status.key}">
+                        <select class="form-select form-select-sm form-control-sm form-control-round custom-select" id="status" name="status">
                             <option th:each="status : ${adoptStatus}" th:value="${status.key}" th:text="${status.value}">value</option>
                         </select>
                     </div>
@@ -267,7 +267,7 @@
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"
                            for="adoptMemberId"><strong>입양(예약)자</strong></label>
                     <div class="col-sm-12">
-                        <input type="text" th:field="*{adoptMemberId}" class="form-control form-control-sm form-control-round"
+                        <input type="text" th:value="*{adoptMemberNickName+'('+adoptMemberEmail+')'}" class="form-control form-control-sm form-control-round"
                                placeholder="제목을 입력해주세요." readonly>
                     </div>
                 </div>
@@ -275,10 +275,10 @@
         </div>
     </div>
 
-    <div class="card-header p-b-0" th:style="${adopt.stopCategory.key != 'NULL' ? 'display:block;' : 'display:none;'}">
+    <div class="card-header p-b-0 adoptStop" th:style="${adopt.stopCategory.key != 'NULL' ? 'display:block;' : 'display:none;'}">
         <h3 class="sub-title"><strong>분양중지 정보</strong></h3>
     </div>
-    <div class="card-block-small p-t-0" th:style="${adopt.stopCategory.key != 'NULL' ? 'display:block;' : 'display:none;'}">
+    <div class="card-block-small p-t-0 adoptStop" th:style="${adopt.stopCategory.key != 'NULL' ? 'display:block;' : 'display:none;'}">
         <div class="row">
             <div class="col-lg-3 mb-3" >
                 <div class="mb-0 form-group">
@@ -290,7 +290,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mb-3">
+            <div class="col-lg-3 mb-3 updateonly">
                 <div class="row form-group required mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1" for="stopChangeCreatedAt"><strong>분양중지일시</strong></label>
                     <div class="col-sm-12">
@@ -300,7 +300,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 mb-3">
+            <div class="col-lg-3 mb-3 updateonly">
                 <div class="row form-group required mb-3">
                     <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"
                            for="stopMemberId"><strong>처리자</strong></label>
@@ -377,89 +377,9 @@
 
 <script>
     $(function () {
-        ckeditorApp.setckeditor();
-        const mySwiper = new Swiper('.swiper-container', {
-            // 옵션 설정
-            slidesPerView: 1, // 한 번에 표시할 슬라이드 수
-            spaceBetween: 20, // 슬라이드 간 간격 (픽셀)
-            loop: false, // 무한 루프 설정
-            // 기타 옵션 및 콜백 함수 등 추가 가능
-            pagination: {
-                el: '.swiper-pagination', // 페이징 컨테이너 요소
-                clickable: true, // 클릭하여 슬라이드로 이동
-            },
-        });
 
-        document.getElementById('prevSlide').addEventListener('click', function () {
-            mySwiper.slidePrev();
-        });
-        document.getElementById('nextSlide').addEventListener('click', function () {
-            mySwiper.slideNext();
-        });
+        adoptInfoController.init()
 
-
-        const adoptFormController = {
-            save: function () {
-                const id = $('#id').val();
-                if (!!id) {
-                    // 수정
-                    this.update();
-                } else {
-                    // 저장
-                    this.insert();
-                }
-            },
-
-            update: function () {
-                if (confirm('수정하시겠습니까?')) {
-                    const id = $('#id').val();
-                    const formData = $('#adoptForm').serializeObject();
-                    formData.content = ckeditorApp.getEditorData('content');
-
-                    $.ajax({
-                        type: 'put',
-                        data: JSON.stringify(formData),
-                        contentType: 'application/json',
-                        dataType: 'json',
-                        url: `/admin/adopts/${id}`
-                    }).done(function (response) {
-                        alert('수정 되었습니다.');
-                        console.log(response);
-                    }).fail(function (error) {
-                        alert('수정중 에러가 발생하였습니다.');
-                        console.log(JSON.stringify(error));
-                    })
-                }
-            },
-
-            insert: function () {
-                if (confirm('저장하시겠습니까?')) {
-                    const formData = $('#adoptForm').serializeObject();
-                    formData.content = ckeditorApp.getEditorData('content');
-
-                    $.ajax({
-                        type: 'post',
-                        data: JSON.stringify(formData),
-                        contentType: 'application/json',
-                        dataType: 'json',
-                        url: '/admin/adopts'
-                    }).done(function (response) {
-                        alert('등록 되었습니다.');
-                        console.log(response);
-                    }).fail(function (error) {
-                        alert('등록중 에러가 발생하였습니다.');
-                        console.log(JSON.stringify(error));
-                    })
-                }
-            }
-
-        }
-
-        $('body').on('click', '#saveBtn', function (event) {
-            adoptFormController.save();
-        }).on('click', '#cancelBtn', function (event) {
-
-        });
     });
 
 
