--- a/module-admin/src/main/resources/templates/saesigManage/view.html
+++ b/module-admin/src/main/resources/templates/saesigManage/view.html
@@ -618,14 +618,7 @@
 
                 const adoptFormController = {
                     save: function () {
-                        const id = $('#id').val();
-                        if (!!id) {
-                            // 수정
-                            this.update();
-                        } else {
-                            // 저장
-                            this.insert();
-                        }
+                        this.update();
                     },
 
                     update: function () {
@@ -633,13 +626,28 @@
                             const id = $('#id').val();
                             const formData = $('#adoptForm').serializeObject();
                             formData.content = ckeditorApp.getEditorData('content');
+                            formData.etcContent = ckeditorApp.getEditorData('etcContent');
+                            if (formData.stopCategory == null){
+                                formData.stopCategory = 'NULL'
+                            }
+                            formData.vaccineList = []
+                            $("input[name=vaccineList]:checked").each(function (){
+                                formData.vaccineList.push($(this).val())
+                            })
+                            // if (formData.createdAt != null){
+                            //     formData.createdAt = new Date(formData.createdAt).toISOString()
+                            // }
+                            // if (formData.modifiedAt != null){
+                            //     formData.modifiedAt = new Date(formData.modifiedAt).toISOString()
+                            // }
+                            // if (formData.statusChangeCreatedAt != null){
+                            //     formData.statusChangeCreatedAt = new Date(formData.statusChangeCreatedAt).toISOString()
+                            // }
 
                             $.ajax({
-                                type: 'put',
-                                data: JSON.stringify(formData),
-                                contentType: 'application/json',
-                                dataType: 'json',
-                                url: `/admin/adopts/${id}`
+                                type: 'POST',
+                                data: formData,
+                                url: `/admin/saesigManage/updateAdoptInfo.do`
                             }).done(function (response) {
                                 alert('수정 되었습니다.');
                                 console.log(response);
@@ -650,26 +658,26 @@
                         }
                     },
 
-                    insert: function () {
-                        if (confirm('저장하시겠습니까?')) {
-                            const formData = $('#adoptForm').serializeObject();
-                            formData.content = ckeditorApp.getEditorData('content');
-
-                            $.ajax({
-                                type: 'post',
-                                data: JSON.stringify(formData),
-                                contentType: 'application/json',
-                                dataType: 'json',
-                                url: '/admin/adopts'
-                            }).done(function (response) {
-                                alert('등록 되었습니다.');
-                                console.log(response);
-                            }).fail(function (error) {
-                                alert('등록중 에러가 발생하였습니다.');
-                                console.log(JSON.stringify(error));
-                            })
-                        }
-                    }
+                    // insert: function () {
+                    //     if (confirm('저장하시겠습니까?')) {
+                    //         const formData = $('#adoptForm').serializeObject();
+                    //         formData.content = ckeditorApp.getEditorData('content');
+                    //
+                    //         $.ajax({
+                    //             type: 'post',
+                    //             data: JSON.stringify(formData),
+                    //             contentType: 'application/json',
+                    //             dataType: 'json',
+                    //             url: '/admin/adopts'
+                    //         }).done(function (response) {
+                    //             alert('등록 되었습니다.');
+                    //             console.log(response);
+                    //         }).fail(function (error) {
+                    //             alert('등록중 에러가 발생하였습니다.');
+                    //             console.log(JSON.stringify(error));
+                    //         })
+                    //     }
+                    // }
 
                 }
 
