chore: 페이지 로딩 수정

--- a/module-admin/src/main/resources/static/files/assets/css/style.css
+++ b/module-admin/src/main/resources/static/files/assets/css/style.css
@@ -3867,9 +3867,9 @@ a[data-toggle="lightbox"] .img-fluid {
     left: 50%;
     top: 50%;
     position: absolute;
-    height: 50px;
-    width: 50px;
-    margin: -25px 0 0 -25px; }
+    height: 200px;
+    width: 200px;
+    margin: -100px 0 0 -100px; }
     .theme-loader .ball-scale .contain {
       height: 100%;
       width: 100%; }
@@ -3878,25 +3878,21 @@ a[data-toggle="lightbox"] .img-fluid {
         .theme-loader .ball-scale .contain .ring:first-child {
           display: block;
           height: 100%;
-          width: 100%;
-          border-radius: 50%;
-          padding: 10px;
-          border: 3px solid transparent;
-          border-left-color: #ff8031;
-          border-right-color: #ff8031;
-          animation: round-rotate 1.5s ease-in-out infinite; }
-          .theme-loader .ball-scale .contain .ring:first-child .frame {
+          width: 100%;}
+          .theme-loader .ball-scale .contain .ring:first-child .frame{
             height: 100%;
+            width: 100%;}
+          .theme-loader .ball-scale .contain .ring:first-child .frame .loadingImg {
+            height: auto;
             width: 100%;
-            border-radius: 50%;
-            border: 3px solid transparent;
-            border-left-color: #0ac282;
-            border-right-color: #0ac282;
-            animation: round-rotate 1.5s ease-in-out infinite; }
+            animation: round-rotate 1.5s ease-in-out infinite;}
 
 @keyframes round-rotate {
   100% {
-    transform: rotate(360deg); } }
+    transform: rotate(360deg);
+    transform-origin: center;
+  }
+}
 
 .progress {
   height: 1rem; }
