--- a/module-admin/src/main/resources/templates/saesigManage/infoForm.html
+++ b/module-admin/src/main/resources/templates/saesigManage/infoForm.html
@@ -273,6 +273,15 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-3 mb-3">
+                <div class="row form-group mb-3">
+                    <label class="form-label col-sm-12 col-form-label p-t-0 pb-1"><strong>분양상태 변경이력</strong></label>
+                    <div class="col-sm-12">
+                        <button type="button" class="btn btn-transparent" onclick="adoptInfoController.openHistoryPop()">이력확인
+                        </button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -370,6 +379,48 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-primary waves-effect waves-light" data-bs-dismiss="modal"
                         aria-label="Close">닫기
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="modal fade" id="adoptStatusHistoryPop" >
+    <div class="modal-dialog modal-lg" role="document">
+        <div class="modal-content type_1">
+            <div class="modal-header">
+                <h4 class="modal-title">변경 이력</h4>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true"></span>
+                </button>
+            </div>
+            <div class="modal-body">
+                <div class="card">
+                    <div class="card-block-small p-t-0">
+                        <div class="dt-responsive table-responsive">
+                            <div id="order-table_wrapper" class="dataTables_wrapper dt-bootstrap4">
+                                <table id="statusChangeHistoryTable" class="display" style="width:100%">
+                                    <thead>
+                                    <tr>
+                                        <th>No</th>
+                                        <th>변경전상태</th>
+                                        <th>변경후상태</th>
+                                        <th>사유</th>
+                                        <th>상태변경일시</th>
+                                        <th>상태변경자</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn btn-transparent m-r-5" data-bs-dismiss="modal"
+                        aria-label="Close">취소
                 </button>
             </div>
         </div>
